tests/ui/parser/doc-before-attr.rs
fn main() {}

/// hi
#[derive(Debug)] //~ERROR expected item after attributes
